# robotics

robot_learning/DRL-robot-navigation/TD3/: train_velodyne_td3.py  velodyne_env.py
robot_learning/DRL-robot-navigation/TD3/assets/: multi_robot_scenario.launch
robot_learning/DRL-robot-navigation/TD3/pytorch_models/: TD3_velodyne_critic.pth
robot_learning/DRL-robot-navigation/TD3/results/: TD3_velodyne.npy
robot_learning/DRL-robot-navigation/TD3/runs/Dec05_05-37-04_krishna-linux/: events.out.tfevents.1733357224.krishna-linux.1532.0
robot_learning/DRL-robot-navigation/TD3/runs/Dec05_06-22-09_krishna-linux/: events.out.tfevents.1733359929.krishna-linux.669.0
robot_learning/DRL-robot-navigation/TD3/runs/Dec05_07-05-33_krishna-linux/: events.out.tfevents.1733362533.krishna-linux.671.0
robot_learning/DRL-robot-navigation/TD3/runs/Dec05_07-06-28_krishna-linux/: events.out.tfevents.1733362588.krishna-linux.2553.0
robot_learning/DRL-robot-navigation/TD3/runs/Dec05_07-26-39_krishna-linux/: events.out.tfevents.1733363799.krishna-linux.3900.0
robot_learning/DRL-robot-navigation/TD3/runs/Dec05_07-41-53_krishna-linux/: events.out.tfevents.1733364713.krishna-linux.7707.0
robot_learning/DRL-robot-navigation/TD3/runs/Dec05_08-01-54_krishna-linux/: events.out.tfevents.1733365915.krishna-linux.1553.0
robot_learning/DRL-robot-navigation/catkin_ws/build_isolated/: catkin_make_isolated.cache
robot_learning/DRL-robot-navigation/catkin_ws/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
robot_learning/DRL-robot-navigation/catkin_ws/src/multi_robot_scenario/: CMakeLists.txt  package.xml
robot_learning/DRL-robot-navigation/catkin_ws/src/multi_robot_scenario/launch/: empty_world.launch
(+110 files in other folders)
