cmake_minimum_required(VERSION 2.8.3)
project(multi_robot_scenario)

## Find catkin macros and libraries
find_package(catkin REQUIRED COMPONENTS
  xacro
)

catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES multi_robot_scenario
#  CATKIN_DEPENDS xacro
#  DEPENDS system_lib
)

include_directories(
# include
  ${catkin_INCLUDE_DIRS}
)

# No executables to add
