<?xml version="1.0"?>
<package format="2">
  <name>multi_robot_scenario</name>
  <version>0.0.0</version>
  <description>The multi_robot_scenario package</description>

  <!-- Maintainer information -->
  <maintainer email="reinis@todo.todo">reinis</maintainer>

  <!-- License information -->
  <license>TODO</license>

  <!-- Build tool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>xacro</build_depend>

  <!-- Build export dependencies -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>xacro</build_export_depend>

  <!-- Execution dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Export tag -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

